# PhD

./: README.md
Deflation_Matlab/GMRESMDR/: BFGMRES.m  BFRRGMRES.m  CurlCurl_0.mtx  DefineAlpha.m  DefineAlphaND.m  DeflationEV.m  DeflationNDQRsv.m  DeflationNDsvd.m  Deflationsvd.m  DeflationsvdRRQR.m  GMRESMDR.m  GMRESMDRNDnoJacobi.m  GMRESMDRNDnoJacobiTest.m  GMRESMDRNDnoJacobiTest1.m  GMRESMDRNestedDissection.m  GMRESMDRnoJacobi.m  Gauss.m  Gram_Schmidt.m  NDQRCPSingularValuesApproximationPk.m  NDQRCPSingularValuesApproximationwithJacobiPr.m  TestADEF2.m  TestAllPreconditioners.m  TestBlockJacobi.m  TestCompareGMRES.m  TestComparePreconditioners.m  TestDeflation.m  TestDeflationBlockJacobi.m  TestDeflationBlockJacobinew.m  TestDeflationwithKwayPartition.m  TestGMRESleftPreconditioned.m  TestGMRESmixPreconditioned.m  TestGMRESrightPreconditioned.m  TestMultiplicativeDefBJ.m  TestPkU2.m  TestSVADEF2.m  TestSVMultiDefBlockJacobi.m  TestSmallestSVsubdomains.m  TestsmallestSVwithQRCPND.m  TestsmallestSVwithRealRRQR.m  TestwithBJP.m  (+70 more)
Deflation_Matlab/smallestSV/: ex1_cmrs.m  ex2_rst.m  mainTest.m  mainTestGeneral.m  test.m  test.m~
Deflation_Python/: README.md  main.py  qr.py  utils.py
Deflation_Python/csvMatrices/: parallax.txt
Parareal_ODE_FreeFem++/: parareal.edp
Parareal_ODE_Python/: ODE_solver_tools.py  error_tools.py  main_ODE.py  plot_tools.py
Parareal_cpp/Heat/Heat_1D/: CMakeLists.txt  ReadMe.txt  errors.txt  fine_solution.txt  parareal_heat_1D  parareal_heat_1D.cpp  parareal_heat_1D_BE  parareal_heat_1D_BE.cpp  parareal_solution.txt  plot_tools.py
(+204 files in other folders)
